--- a/index.html
+++ b/index.html
@@ -48,40 +48,41 @@
             </div>
             <i class="fa-light fa-circle-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
             
-            <section>
-              <h1 id="hébergements">Hébergements à Marseille</h1>
+            <section id="section_centrale">
+            <div id="hébergements">
+              <h1>Hébergements à Marseille</h1>
               <div>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Auberge La cannebière"/>
                     <h3>Auberge La Cannebière</h3>
                     <p>Nuit à partir de 25€</p>
                     <img src="font awesome"/>
                 </a>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo Hôtel du port"/>
                     <h3>Hôtel du port</h3>
                     <p>Nuit à partir de 52€</p>
                     <img src="font awesome"/>
                 </a>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo Hôtel les mouettes"/>
                     <h3>Hôtel les mouettes</h3>
                     <p>Nuit à partir de 76€</p>
                     <img src="font awesome"/>
                 </a>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo Hôtel de la mer"/>
                     <h3>Hôtel de la mer</h3>
                     <p>Nuit à partir de 46€</p>
                     <img src="font awesome"/>
                 </a>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo Auberge Le Panier"/>
                     <h3>Auberge Le Panier</h3>
                     <p>Nuit à partir de 23€</p>
                     <img src="font awesome"/>
                 </a>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo Hôtel chez Amina"/>
                     <h3>Hôtel chez Amina</h3>
                     <p>Nuit à partir de 96€</p>
@@ -89,58 +90,59 @@
                 </a>
               </div>
               <h2>Afficher plus</h2>
-            </section>
-
-            <aside>
+            </div>
+            
+            <div id="populaires">
                 <div>
                     <h1>Les plus populaires</h1><i class="fa-solid fa-star"></i>
                 </div>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo Hôtel Le soleil du matin"/>
                     <h3>Hôtel Le soleil du matin</h3>
                     <p>Nuit à partir de 128€</p>
                     <img src="font awesome"/>
                 </a>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo Au coeur de l'eau Chambres d'hôtes"/>
                     <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                     <p>Nuit à partir de 71€</p>
                     <img src="font awesome"/>
                 </a>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo Hôtel Tout bleu et Blanc"/>
                     <h3>Hôtel Tout bleu et Blanc</h3>
                     <p>Nuit à partir de 68€</p>
                     <img src="font awesome"/>
                 </a>
-            </aside>
+            </div>
+            </section>
 
-            <section>
-                <h1 id="activités">Activités à Marseille</h1>
-                <a href="#">
+            <section id="activités">
+                <h1>Activités à Marseille</h1>
+                <a href="#" class="box">
                     <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo Vieux Port"/>
                     <h3>Vieux Port</h3>
                 </a>
                 <div>
-                    <a href="#">
+                    <a href="#" class="box">
                         <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo Fort de Pomègues"/>
                         <h3>Fort de Pomègues</h3>
                     </a>
-                    <a href="#">
+                    <a href="#" class="box">
                         <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo Iles du frioul"/>
                         <h3>Iles du frioul</h3>
                     </a>
                 </div>
-                <a href="#">
+                <a href="#" class="box">
                     <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo Parc National des Calanques"/>
                     <h3>Parc National des Calanques</h3>
                 </a>
                 <div>
-                    <a href="#">
+                    <a href="#" class="box">
                         <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo Notre-Dame-de-la-Garde"/>
                         <h3>Notre-Dame-de-la-Garde</h3>
                     </a>
-                    <a href="#">
+                    <a href="#" class="box">
                         <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo Parc Longchamp"/>
                         <h3>Parc Longchamp</h3>
                     </a>
