Responsive CSS zone centrale

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         </header>
         
         <main>
-            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-            <p>En plein centre ville ou en pleine nature</p>
-            <form method="post" action="traitement.php">
-                <i class="fa-solid fa-location-dot"></i><input type="text" name="ville" value="Marseille, France"/><input id="rechercher" type="button" value="Rechercher"/><i id="loupe" class="fa-solid fa-magnifying-glass"></i>
-            </form>
+            <section id="section_haute">
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
+                <form method="post" action="traitement.php">
+                    <i class="fa-solid fa-location-dot"></i><input type="text" name="ville" value="Marseille, France"/><input id="rechercher" type="button" value="Rechercher"/><i id="loupe" class="fa-solid fa-magnifying-glass"></i>
+                </form>
+            </section>
 
             <section>
                 <div id="filtres">
