--- a/index.html
+++ b/index.html
@@ -219,56 +219,60 @@
 
             <section id="activités">
                 <h1>Activités à Marseille</h1>
-                <div class="card">
-                    <a href="#">
-                        <div class="card_image"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo Vieux Port"/></div>
-                        <div class="card_corps">
-                            <h3>Vieux Port</h3>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="#">
-                        <div class="card_image"><img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo Fort de Pomègues"/></div>
-                        <div class="card_corps">
-                            <h3>Fort de Pomègues</h3>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <div class="card">
+                <div class="card_activités">
+                    <div class="card_l">
                         <a href="#">
-                            <div class="card_image"><img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo Iles du frioul"/></div>
+                            <div class="card_l_image"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo Vieux Port"/></div>
                             <div class="card_corps">
-                                <h3>Iles du frioul</h3>
+                                <h3>Vieux Port</h3>
                             </div>
                         </a>
                     </div>
-                </div>
-                <div class="card">
-                    <a href="#">
-                        <div class="card_image"><img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo Parc National des Calanques"/></div>
-                        <div class="card_corps">
-                            <h3>Parc National des Calanques</h3>
+                    <div class="card_verticale">
+                        <div class="card_m">
+                            <a href="#">
+                                <div class="card_m_image"><img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo Fort de Pomègues"/></div>
+                                <div class="card_corps">
+                                    <h3>Fort de Pomègues</h3>
+                                </div>
+                            </a>
                         </div>
-                    </a>
-                </div>
-                <div>
-                    <div class="card">
+                        <div>
+                            <div class="card_s">
+                                <a href="#">
+                                    <div class="card_s_image"><img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo Iles du frioul"/></div>
+                                    <div class="card_corps">
+                                        <h3>Iles du frioul</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card_l">
                         <a href="#">
-                            <div class="card_image"><img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo Notre-Dame-de-la-Garde"/></div>
+                            <div class="card_l_image"><img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo Parc National des Calanques"/></div>
                             <div class="card_corps">
-                                <h3>Notre-Dame-de-la-Garde</h3>
+                                <h3>Parc National des Calanques</h3>
                             </div>
                         </a>
                     </div>
-                    <div class="card">
-                        <a href="#">
-                            <div class="card_image"><img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo Parc Longchamp"/></div>
-                            <div class="card_corps">
-                                <h3>Parc Longchamp</h3>
-                            </div>
-                        </a>
+                    <div class="card_verticale">
+                        <div class="card_s">
+                            <a href="#">
+                                <div class="card_s_image"><img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo Notre-Dame-de-la-Garde"/></div>
+                                <div class="card_corps">
+                                    <h3>Notre-Dame-de-la-Garde</h3>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card_m">
+                            <a href="#">
+                                <div class="card_m_image"><img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo Parc Longchamp"/></div>
+                                <div class="card_corps">
+                                    <h3>Parc Longchamp</h3>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
