--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
                 <form method="post" action="traitement.php">
                     <i class="fa-solid fa-location-dot"></i><input type="text" name="ville" value="Marseille, France"/><input id="rechercher" type="button" value="Rechercher"/><i id="loupe" class="fa-solid fa-magnifying-glass"></i>
                 </form>
-            </section>
 
-            <section>
                 <div id="filtres">
                     <h2>Filtres</h2>
-                    <div>
-                        <i class="fa-solid fa-money-bill-wave"></i>
-                        <input class="bouton" type="button" value="Economique">
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-child-reaching"></i>
-                        <input class="bouton" type="button" value="Familial">
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-heart"></i>
-                        <input class="bouton" type="button" value="Romantique">
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-dog"></i>
-                        <input class="bouton" type="button" value="Animaux autorisés">
+                    <div id="filtres_liste">
+                        <div>
+                            <i class="fa-solid fa-money-bill-wave"></i>
+                            <input class="bouton" type="button" value="Economique">
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-child-reaching"></i>
+                            <input class="bouton" type="button" value="Familial">
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-heart"></i>
+                            <input class="bouton" type="button" value="Romantique">
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-dog"></i>
+                            <input class="bouton" type="button" value="Animaux autorisés">
+                        </div>
                     </div>
                 </div>
+                
+                <div id="info"><i class="fa-solid fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
             </section>
 
-            <div id="info"><i class="fa-solid fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
-            
             <section id="section_centrale">
                 <div id="hébergements">
                     <h1>Hébergements à Marseille</h1>
@@ -65,7 +65,7 @@
                                     <div class="card_image"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Auberge La cannebière"/></div>
                                     <div class="card_corps">
                                         <h3 class="nom">Auberge La Cannebière</h3>
-                                        <p>Nuit à partir de 25€</p>
+                                        <p>Nuit à partir de <strong>25€</strong></p>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
@@ -121,7 +121,7 @@
                                     <div class="card_image"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo Auberge Le Panier"/></div>
                                     <div class="card_corps">
                                         <h3 class="nom">Auberge Le Panier</h3>
-                                        <p>Nuit à partir de 23€</p>
+                                        <p>Nuit à partir de <strong>23€</strong></p>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
@@ -196,7 +196,7 @@
                         <div class="card">
                             <a href="#">
                                 <div class="populaires_liste">
-                                    <div class="card_image"><img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo Hôtel Tout bleu et Blanc"/></div>
+                                    <div class="card_image"><img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash2.jpg" alt="photo Hôtel Tout bleu et Blanc"/></div>
                                     <div class="card_corps">
                                         <div>
                                             <h3>Hôtel Tout bleu et Blanc</h3>
