Séparation des fichiers CSS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0"/>
         <link rel="stylesheet" href="dossier_CSS/normalize.css"/>
         <link rel="stylesheet" href="dossier_CSS/reset.css"/>
-        <link rel="stylesheet" href="dossier_CSS/styles.css"/>
+        <link rel="stylesheet" href="dossier_CSS/styles_desktop.css"/>
+        <link rel="stylesheet" href="dossier_CSS/styles_tablette.css"/>
+        <link rel="stylesheet" href="dossier_CSS/styles_mobile.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/68daa10ad8.js" crossorigin="anonymous"></script>
