--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/68daa10ad8.js" crossorigin="anonymous"></script>
+        <link rel="shortcut icon" href="images/logo/Favicon.ico"/>
         <title>Booki</title>
     </head>
 
@@ -34,7 +35,7 @@
                 </form>
 
                 <div id="filtres">
-                    <h2>Filtres</h2>
+                    <h3>Filtres</h3>
                     <div id="filtres_liste">
                         <div>
                             <i class="fa-solid fa-money-bill-wave"></i>
@@ -60,13 +61,13 @@
 
             <section id="section_centrale">
                 <div id="hébergements">
-                    <h1>Hébergements à Marseille</h1>
-                    <div class="hôtels">
+                    <h2>Hébergements à Marseille</h2>
+                    <article class="hôtels">
                             <div class="card">
                                 <a href="#">
                                     <div class="card_image"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Auberge La cannebière"/></div>
                                     <div class="card_corps">
-                                        <h3 class="nom">Auberge La Cannebière</h3>
+                                        <h4 class="nom">Auberge La Cannebière</h4>
                                         <p>Nuit à partir de <strong>25€</strong></p>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
@@ -80,7 +81,7 @@
                                 <a href="#">
                                     <div class="card_image"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo Hôtel du port"/></div>
                                     <div class="card_corps">
-                                        <h3 class="nom">Hôtel du port</h3>
+                                        <h4 class="nom">Hôtel du port</h4>
                                         <p>Nuit à partir de 52€</p>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
@@ -94,7 +95,7 @@
                                 <a href="#">
                                     <div class="card_image"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo Hôtel les mouettes"/></div>
                                     <div class="card_corps">
-                                        <h3 class="nom">Hôtel les mouettes</h3>
+                                        <h4 class="nom">Hôtel les mouettes</h4>
                                         <p>Nuit à partir de 76€</p>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
@@ -108,7 +109,7 @@
                                 <a href="#">
                                     <div class="card_image"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo Hôtel de la mer"/></div>
                                     <div class="card_corps">
-                                        <h3 class="nom">Hôtel de la mer</h3>
+                                        <h4 class="nom">Hôtel de la mer</h4>
                                         <p>Nuit à partir de 46€</p>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
@@ -122,7 +123,7 @@
                                 <a href="#">
                                     <div class="card_image"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo Auberge Le Panier"/></div>
                                     <div class="card_corps">
-                                        <h3 class="nom">Auberge Le Panier</h3>
+                                        <h4 class="nom">Auberge Le Panier</h4>
                                         <p>Nuit à partir de <strong>23€</strong></p>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
@@ -136,7 +137,7 @@
                                 <a href="#">
                                     <div class="card_image"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo Hôtel chez Amina"/></div>
                                     <div class="card_corps">
-                                        <h3 class="nom">Hôtel chez Amina</h3>
+                                        <h4 class="nom">Hôtel chez Amina</h4>
                                         <p>Nuit à partir de 96€</p>
                                         <i class="fa-solid fa-star bleu"></i>
                                         <i class="fa-solid fa-star bleu"></i>
@@ -146,22 +147,22 @@
                                     </div>
                                 </a>
                             </div>
-                    </div>
-                    <a href="#"><h2>Afficher plus</h2></a>
+                    </article>
+                    <a href="#"><h3>Afficher plus</h3></a>
                 </div>
                 
                 <aside id="populaires">
                     <div id="populaires_étoile">
-                        <h1>Les plus populaires</h1><i class="fa-solid fa-star"></i>
+                        <h2>Les plus populaires</h2><i class="fa-solid fa-star"></i>
                     </div>
-                    <div class="hôtels">
+                    <article class="hôtels">
                         <div class="card">
                             <a href="#">
                                 <div class="populaires_liste">
                                     <div class="card_image"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo Hôtel Le soleil du matin"/></div>
                                     <div class="card_corps">
                                         <div>
-                                            <h3>Hôtel Le soleil du matin</h3>
+                                            <h4>Hôtel Le soleil du matin</h4>
                                             <p>Nuit à partir de 128€</p>
                                         </div>
                                         <div>
@@ -181,7 +182,7 @@
                                     <div class="card_image"><img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo Au coeur de l'eau Chambres d'hôtes"/></div>
                                     <div class="card_corps">
                                         <div>
-                                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                                            <h4>Au coeur de l'eau Chambres d'hôtes</h4>
                                             <p>Nuit à partir de 71€</p>
                                         </div>
                                         <div>
@@ -201,7 +202,7 @@
                                     <div class="card_image"><img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash2.jpg" alt="photo Hôtel Tout bleu et Blanc"/></div>
                                     <div class="card_corps">
                                         <div>
-                                            <h3>Hôtel Tout bleu et Blanc</h3>
+                                            <h4>Hôtel Tout bleu et Blanc</h4>
                                             <p>Nuit à partir de 68€</p>
                                         </div>
                                         <div>
@@ -215,18 +216,18 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
+                    </article>
                 </aside>
             </section>
 
             <section id="activités">
-                <h1>Activités à Marseille</h1>
-                <div class="card_activités">
+                <h2>Activités à Marseille</h2>
+                <article class="card_activités">
                     <div class="card_l">
                         <a href="#">
                             <div class="card_l_image"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo Vieux Port"/></div>
                             <div class="card_corps">
-                                <h3>Vieux Port</h3>
+                                <h4>Vieux Port</h4>
                             </div>
                         </a>
                     </div>
@@ -235,7 +236,7 @@
                             <a href="#">
                                 <div class="card_m_image"><img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo Fort de Pomègues"/></div>
                                 <div class="card_corps">
-                                    <h3>Fort de Pomègues</h3>
+                                    <h4>Fort de Pomègues</h4>
                                 </div>
                             </a>
                         </div>
@@ -244,7 +245,7 @@
                                 <a href="#">
                                     <div class="card_s_image"><img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo Iles du frioul"/></div>
                                     <div class="card_corps">
-                                        <h3>Iles du frioul</h3>
+                                        <h4>Iles du frioul</h4>
                                     </div>
                                 </a>
                             </div>
@@ -254,7 +255,7 @@
                         <a href="#">
                             <div class="card_l_image"><img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo Parc National des Calanques"/></div>
                             <div class="card_corps">
-                                <h3>Parc National des Calanques</h3>
+                                <h4>Parc National des Calanques</h4>
                             </div>
                         </a>
                     </div>
@@ -263,7 +264,7 @@
                             <a href="#">
                                 <div class="card_s_image"><img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo Notre-Dame-de-la-Garde"/></div>
                                 <div class="card_corps">
-                                    <h3>Notre-Dame-de-la-Garde</h3>
+                                    <h4>Notre-Dame-de-la-Garde</h4>
                                 </div>
                             </a>
                         </div>
@@ -271,18 +272,18 @@
                             <a href="#">
                                 <div class="card_m_image"><img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo Parc Longchamp"/></div>
                                 <div class="card_corps">
-                                    <h3>Parc Longchamp</h3>
+                                    <h4>Parc Longchamp</h4>
                                 </div>
                             </a>
                         </div>
                     </div>
-                </div>
+                </article>
             </section>
         </main>
         
         <footer>
             <div class="liens_pied_page">
-                <h2>A propos</h2>
+                <h3>A propos</h3>
                 <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
                     <li><a href="#">Conditions générales de vente</a></li>
@@ -290,14 +291,14 @@
                 </ul>
             </div>
             <div class="liens_pied_page">
-                <h2>Nos hébergements</h2>
+                <h3>Nos hébergements</h3>
                 <ul>
                     <li><a href="#">Charte qualité</a></li>
                     <li><a href="#">Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div class="liens_pied_page">
-                <h2>Assistance</h2>
+                <h3>Assistance</h3>
                 <ul>
                     <li><a href="#">Centre d'aide</a></li>
                     <li><a href="#">Nous contacter</a></li>
