--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="dossier_CSS/normalize.css"/>
         <link rel="stylesheet" href="dossier_CSS/reset.css"/>
         <link rel="stylesheet" href="dossier_CSS/styles_desktop.css"/>
-        <link rel="stylesheet" href="dossier_CSS/styles_tablette.css"/>
-        <link rel="stylesheet" href="dossier_CSS/styles_mobile.css"/>
+        <link rel="stylesheet" media="screen and (max-width: 992px)" href="dossier_CSS/styles_tablette.css"/>
+        <link rel="stylesheet" media= "screen and (max-width: 768px)" href="dossier_CSS/styles_mobile.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/68daa10ad8.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
             <img class="logo" src="images/logo/Booki@3x.png" alt="logo Booki"/>
             <nav>                
                 <ul>
-                    <li><a href="#hébergements">Hébergements</a></li>
+                    <li><a href="#hebergements">Hébergements</a></li>
                     <li><a href="#activités">Activités</a></li>
                 </ul>
             </nav>
@@ -36,22 +36,22 @@
 
                 <div id="filtres">
                     <h3>Filtres</h3>
-                    <div id="filtres_liste">
-                        <div>
+                    <div>
+                        <div class="actif">
                             <i class="fa-solid fa-money-bill-wave"></i>
-                            <input class="bouton" type="button" value="Economique">
+                            <a href="#">Économique</a>
                         </div>
-                        <div>
+                        <div class="actif">
                             <i class="fa-solid fa-child-reaching"></i>
-                            <input class="bouton" type="button" value="Familial">
+                            <a href="#">Familial</a>
                         </div>
-                        <div>
+                        <div class="actif">
                             <i class="fa-solid fa-heart"></i>
-                            <input class="bouton" type="button" value="Romantique">
+                            <a href="#">Romantique</a>
                         </div>
-                        <div>
+                        <div class="actif">
                             <i class="fa-solid fa-dog"></i>
-                            <input class="bouton" type="button" value="Animaux autorisés">
+                            <a href="#">Animaux autorisés</a>
                         </div>
                     </div>
                 </div>
@@ -60,9 +60,9 @@
             </section>
 
             <section id="section_centrale">
-                <div id="hébergements">
+                <div id="hebergements">
                     <h2>Hébergements à Marseille</h2>
-                    <article class="hôtels">
+                    <article class="hotels">
                             <div class="card">
                                 <a href="#">
                                     <div class="card_image"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Auberge La cannebière"/></div>
@@ -152,10 +152,10 @@
                 </div>
                 
                 <aside id="populaires">
-                    <div id="populaires_étoile">
+                    <div id="populaires_etoile">
                         <h2>Les plus populaires</h2><i class="fa-solid fa-star"></i>
                     </div>
-                    <article class="hôtels">
+                    <article class="hotels">
                         <div class="card">
                             <a href="#">
                                 <div class="populaires_liste">
@@ -220,9 +220,9 @@
                 </aside>
             </section>
 
-            <section id="activités">
+            <section id="section_activites">
                 <h2>Activités à Marseille</h2>
-                <article class="card_activités">
+                <article class="card_activites">
                     <div class="card_l">
                         <a href="#">
                             <div class="card_l_image"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo Vieux Port"/></div>
