--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
                                     </div>
                                 </a>
                             </div>
+                        </article>
+                        <article class="hotels">
                             <div class="card">
                                 <a href="#">
                                     <div class="card-image">
